1.20.6 Initial Update New Decompiler Runtime Official mappings ItemStacks arnt Capability providers anymore, use Vanilla's system.
Co-authored-by: RealMangoRage <64402114+RealMangorage@users.noreply.github.com>
Co-authored-by: Paint_Ninja <PaintNinja@users.noreply.github.com>